# Simple_TCP_Server

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Client.cpp  Client.h
src/Client/client_start/: CMakeLists.txt  client_start.cpp
src/Server/: CMakeLists.txt  Server.cpp  Server.h
src/Server/server_start/: CMakeLists.txt  server_start.cpp
